...
		navigation.navigate('HowTo')
	}

	return (
		<Bg bg="background" flex={1}>
			<Screen
				testID="yourGoalScreen"
				sludge={SludgeVariant.Ditto}
				preset="scroll"
				stdMargin
				mt={4}
				headerTitle={<Lead2 fw="Medium">{strings.hi}</Lead2>}
				headerSubTitle={<Lead2 fw="Bold">{strings.vibe}</Lead2>}
...
							/>
						</V>
					)
				})}
			</Screen>
			<SafeAreaView style={{ paddingHorizontal: mainHorizontalMargin }}>
				<Button mb={3} onPress={onContinue} disabled={!selected} testID="goalContinue">
					{strings.continue}
				</Button>
				<V width={250} as="center">
					<Caption2 ta="center" lh={18} color="grey500">
						{strings.terms('primaryText')}
					</Caption2>
...
