...
			navigation.navigate('Home')
			setHasSeenOnboarding()
		}
	}

	return (
		<Screen testID="howToScreen" unsafe preset="fixed">
			<V flex={1}>
				<View style={{ top: -7, left: -30 }}>
					<Sludge variant={SludgeVariant.Arbok} />
				</View>
				<V px={6} pt={8}>
					<PointyImage
...
					</Lead>
					<Body style={{ width: 205 }} ta="right">
						{strings.onboarding.howTo.restSubtitle}
					</Body>
				</V>
				<V px={4} pt={6}>
					<Button onPress={onPress} hasHaptic testID="howToContinue">
						{strings.onboarding.howTo.getStarted}
					</Button>
				</V>
			</SafeAreaView>
		</Screen>
	)
...
